[metadata]
name = leetcode
version = 0.0.0
description = This package contains leetcode solutions and implementations of data structures and algorithms.
author = Andrei Sandu
author_email = NA
url = https://github.com/andrew31415/1337code
platforms = unix, linux, osx, cygwin, win32

[options]
packages = 
    find:

[options.packages.find]
exclude = tests

[options.extras_require]
testing = 
    flake8==6.0.0
    pipenv==2023.2.18
    pytest==7.2.2
    pytest-cov==4.0.0
    mypy==1.0.1

[options.package_data]
leetcode = py.typed

[flake8]
max-line-length = 121